Fix duplicate declaration bugs when installing Dynatrace components on the same host. Added test scenario 'server_collector_agent'.

--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -47,6 +47,10 @@ suites:
     provisioner:
       manifest: server/init.pp
 
+  - name: server_collector_agent
+    provisioner:
+      manifest: server_collector_agent/init.pp
+
   - name: wsagent_package
     provisioner:
       manifest: wsagent_package/init.pp
