--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,62 +8,76 @@ driver:
   name: docker
   use_sudo: false
 
+
 platforms:
-  - name: centos-6
+  - name: centos-7
     driver_config:
+      privileged: true
+      run_command: /usr/sbin/init
       provision_command:
         - yum update -y
+        # install initscripts needed to 'service' command
+        - yum -y install initscripts
         # Install common dependencies
         - yum install -y net-tools tar wget which
         # Install ruby dependencies
-        - yum install -y git gcc-c++ libffi-devel libssl-devel openssl-devel readline-devel zlib-devel
-        # Install ruby 2.2.0
+        - yum install -y git gcc-c++ bzip2 make patch libyaml-devel autoconf automake libtool bison curl sqlite-devel libssl-devel openssl-devel readline-devel zlib-devel
+        # Install ruby 2.4.0
         - git clone https://github.com/sstephenson/rbenv.git ~/.rbenv
         - git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build
         - git clone https://github.com/sstephenson/rbenv-gem-rehash.git ~/.rbenv/plugins/rbenv-gem-rehash
-        - ~/.rbenv/bin/rbenv install 2.2.0
-        - ~/.rbenv/bin/rbenv global 2.2.0
+        - ~/.rbenv/bin/rbenv install 2.4.0
+        - ~/.rbenv/bin/rbenv global 2.4.0
         - ln `~/.rbenv/bin/rbenv which ruby` /usr/bin/ruby
         # Install Puppet 4.2.1
-        - ~/.rbenv/shims/gem install puppet -v 4.2.1
+        - ~/.rbenv/shims/gem install puppet -v 4.10.0
         - ln `~/.rbenv/bin/rbenv which puppet` /usr/bin/puppet
+        # Install java 8
+        - yum install -y java-1.8.0-openjdk-devel
 
-  - name: debian-7.8
+  - name: debian-8.8
     driver_config:
       provision_command:
         - apt-get update
         # Install common dependencies
         - apt-get install -y net-tools tar wget
+        # Install java 8
+        - echo "deb http://ftp.de.debian.org/debian jessie-backports main" >> /etc/apt/sources.list
+        - apt-get update
+        - apt install -y -t jessie-backports  openjdk-8-jre-headless ca-certificates-java
+        - apt-get install openjdk-8-jdk -y
         # Install ruby dependencies
         - apt-get install -y git-core build-essential libffi-dev libssl-dev libcurl4-openssl-dev libreadline-dev
-        # Install ruby 2.2.0
+        # Install ruby 2.4.0
         - git clone https://github.com/sstephenson/rbenv.git ~/.rbenv
         - git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build
         - git clone https://github.com/sstephenson/rbenv-gem-rehash.git ~/.rbenv/plugins/rbenv-gem-rehash
-        - ~/.rbenv/bin/rbenv install 2.2.0
-        - ~/.rbenv/bin/rbenv global 2.2.0
+        - ~/.rbenv/bin/rbenv install 2.4.0
+        - ~/.rbenv/bin/rbenv global 2.4.0
         - ln `~/.rbenv/bin/rbenv which ruby` /usr/bin/ruby
-        # Install Puppet 4.2.1
-        - ~/.rbenv/shims/gem install puppet -v 4.2.1
+        # Install Puppet 4.10.0
+        - ~/.rbenv/shims/gem install puppet -v 4.10.0
         - ln `~/.rbenv/bin/rbenv which puppet` /usr/bin/puppet
 
-  - name: ubuntu-12.04
+  - name: ubuntu-16.04
     driver_config:
       provision_command:
         - apt-get update
         # Install common dependencies
         - apt-get install -y net-tools tar wget
+        # Install java 8
+        - apt-get install openjdk-8-jdk  -y
         # Install ruby dependencies
         - apt-get install -y git-core build-essential libffi-dev libssl-dev libcurl4-openssl-dev libreadline-dev
-        # Install ruby 2.2.0
+        # Install ruby 2.4.0
         - git clone https://github.com/sstephenson/rbenv.git ~/.rbenv
         - git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build
         - git clone https://github.com/sstephenson/rbenv-gem-rehash.git ~/.rbenv/plugins/rbenv-gem-rehash
-        - ~/.rbenv/bin/rbenv install 2.2.0
-        - ~/.rbenv/bin/rbenv global 2.2.0
+        - ~/.rbenv/bin/rbenv install 2.4.0
+        - ~/.rbenv/bin/rbenv global 2.4.0
         - ln `~/.rbenv/bin/rbenv which ruby` /usr/bin/ruby
-        # Install Puppet 4.2.1
-        - ~/.rbenv/shims/gem install puppet -v 4.2.1
+        # Install Puppet 4.10.0
+        - ~/.rbenv/shims/gem install puppet -v 4.10.0
         - ln `~/.rbenv/bin/rbenv which puppet` /usr/bin/puppet
 
 suites:
@@ -71,8 +85,8 @@ suites:
     provisioner:
       manifest: apache_wsagent_debian/init.pp
     includes:
-      - debian-7.8
-      - ubuntu-12.04
+      - debian-8.8
+      - ubuntu-16.04
 
   - name: apache_wsagent_redhat
     provisioner:
